# splusdata

./: pyproject.toml
splusdata/: __init__.py  core.py  vars.py
splusdata/features/: find_pointings.py  io.py  zp_map.py
splusdata/features/zeropoints/: zp_image.py
splusdata/scubes/: README.md  SCubes_example.ipynb  __init__.py  constants.py  core.py  read.py  scripts.py
